Mon Dec 25 00:31:05 CST 2000 Adam Heath <doogie@debian.org>

  * include/dpkg.h.in, lib/mlib.c: Added generic setup code to buffer
    copy loop.

Sun Dec 24 23:48:45 CST 2000 Adam Heath <doogie@debian.org>

  * include/dpkg.h.in, lib/Makefile.in, lib/mlib.c, utils/Makefile.in,
    utils/md5sum.c: Moved md5 code into generic buffer_copy loop.

Sun Dec 24 13:59:36 CST 2000 Adam Heath <doogie@debian.org>

  * Use DESTDIR when installing /etc/dpkg/origins/dpkg

Sun Dec 24 17:35:12 CET 2000 Wichert Akkerman <wakkerma@debian.org>

  * dselect/main.cc: make commandline options work again
  * Makefile.conf.in, configure.in,automake/dpkg.m4: revert changes from Adam
  * Makefile.conf.in: add @CWARNS@ to CFLAGS
  * configure.in: add AC_SUBST for CWARNS

Sun Dec 24 17:05:45 CET 2000 Wichert Akkerman <wakkerma@debian.org>

  * scripts/dpkg-genchanges.pl: output descriptions for udebs as well

Sun Dec 24 06:31:55 CST 2000 Adam Heath <doogie@debian.org>

  * scripts/dpkg-name.sh: Add -k|--symlink option.

Sun Dec 24 05:58:48 CST 2000 Adam Heath <doogie@debian.org>

  * dselect/main.cc: Made the accelerator keys in dselect's main
    menu separate options, so that they can be translated separately.

Sun Dec 24 05:31:27 CST 2000 Adam Heath <doogie@debian.org>

  * debian/control: Added depends on sysvinit (>= 2.72), so that we
    can make sure that /etc/rcS.d exists.

Sun Dec 24 05:24:23 CST 2000 Adam Heath <doogie@debian.org>

  * scripts/update-rc.d: Changed documentation and help, as -f only
    applies during remove.

Sun Dec 24 05:10:29 CST 2000 Adam Heath <doogie@debian.org>

  * main/main.c: Added a --force-all option.

Sun Dec 24 04:32:34 CST 2000 Adam Heath <doogie@debian.org>

  * main/main.c: Format help string for --abort-after like other
    option help strings.

Sun Dec 24 02:38:38 CST 2000 Adam Heath <doogie@debian.org>

  * methods/disk.install, methods/disk.setup, methods/disk.update,
    methods/floppy.install, methods/floppy.update, methods/hd.setup,