@@ -61,7 +61,7 @@ const char thisname[]= MD5SUM;
 
 void usage(void);
 void print_digest(unsigned char *p);
-int mdfile(FILE *fp, unsigned char *digest);
+int mdfile(int fd, unsigned char *digest);
 int do_check(FILE *chkf);
 int hex_digit(int c);
 int get_md5_line(FILE *fp, unsigned char *digest, char *file);
@@ -106,7 +106,7 @@ main(int argc, char **argv)
 		exit(do_check(fp));
 	}
 	if (argc == 0) {
-		if (mdfile(stdin, digest)) {
+		if (mdfile(fileno(stdin), digest)) {
 			fprintf(stderr, _("%s: read error on stdin\n"), progname);
 			exit(2);
 		}
@@ -123,7 +123,7 @@ main(int argc, char **argv)
 			rc = 2;
 			continue;
 		}
-		if (mdfile(fp, digest)) {
+		if (mdfile(fileno(fp), digest)) {
 			fprintf(stderr, _("%s: error reading %s\n"), progname, *argv);
 			rc = 2;
 		} else {
@@ -148,9 +148,9 @@ that is printed on stdout by this program when it generates digests.\n"), stderr
 }
 
 int
-mdfile(FILE *fp, unsigned char *digest)
+mdfile(int fd, unsigned char *digest)
 {
-	ssize_t ret = stream_md5(fp, digest, -1, _("mdfile"));
+	ssize_t ret = fd_md5(fd, digest, -1, _("mdfile"));
 	if ( ret >= 0 )
 		return 0;
 	else
@@ -233,7 +233,7 @@ do_check(FILE *chkf)
 			ex = 2;
 			continue;
 		}
-		if (mdfile(fp, file_digest)) {
+		if (mdfile(fileno(fp), file_digest)) {
 			fprintf(stderr, _("%s: error reading %s\n"), progname, filename);
 			ex = 2;
 			fclose(fp);
