@@ -1,3 +1,7 @@
+Mon Dec 25 00:46:47 CST 2000 Adam Heath <doogie@debian.org>
+
+  * utils/md5sum.c: Don't use FILE * in mdfile.
+
 Mon Dec 25 00:31:05 CST 2000 Adam Heath <doogie@debian.org>
 
   * include/dpkg.h.in, lib/mlib.c: Added generic setup code to buffer
